--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,8 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  h3 Our App contains: 
+  ul 
+    li #{strong Songs}: !{songs_count}
+    li #{strong Artists}: !{artists_count}
+    li #{strong Genres}: !{genres_count}
