adding the initial Routes and config

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,6 +5,6 @@ block content
   p Welcome to #{title}
   h3 Our App contains: 
   ul 
-    li #{strong Songs}: !{songs_count}
-    li #{strong Artists}: !{artists_count}
-    li #{strong Genres}: !{genres_count}
+    li #[strong Songs:] !{songs_count}
+    li #[strong Artists:] !{artists_count}
+    li #[strong Genres:]: !{genres_count}
