--- a/views/genre_form.pug
+++ b/views/genre_form.pug
@@ -4,7 +4,7 @@ block content
     h1=title 
         form(method="POST")
             .form-group 
-                label(for='name') Genre Name: 
+                label(for='name') Name: 
                 input#name.form-control(type='text', placeholder='Rock, Pop music, Jazz etc.' name='name' required value=(undefined===genre ? '' : genre.name) )
             button.btn.btn-primary(type='submit') Submit
         if errors 
