adding the Artist controllers

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,13 +17,13 @@ html(lang='en')
               li
                 a(href='/catalog') Home
               li
-                a(href='/catalog/songs') All books
+                a(href='/catalog/songs') All Songs
               li
-                a(href='/catalog/artists') All authors
+                a(href='/catalog/artists') All Artists
               li
-                a(href='/catalog/genres') All genres
+                a(href='/catalog/genres') All Genres
               li
-                a(href='/catalog/users') All users
+                a(href='/catalog/users') All Users
               li
                 hr
               li
