adding Cloundinary Storage using Multer-Express

--- a/views/artist_details.pug
+++ b/views/artist_details.pug
@@ -6,6 +6,10 @@ block content
     else 
         h1=title 
         a(href=artist.link) #{artist.name}'s Spotify.
+        hr
+        if artist.avatar 
+            img(src=artist.avatar)
+            hr
         if songs.length > 0
             h3 Songs.
             ul 
