--- a/views/artist_form.pug
+++ b/views/artist_form.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content 
     h1=title 
-    form(method="POST")
+    form(method="POST", enctype="multipart/form-data")
         .form-group 
             label(for='name') Name: 
                 input#name.form-control(type='text', name='name' required value=(undefined===artist ? '' : artist.name) )
@@ -10,8 +10,11 @@ block content
             label(for='link') Spotify Link: 
                 input#link.form-control(type='text', name='link' required value=(undefined===artist ? '' : artist.link) )
         .form-group 
-                label(for='date-of-birth') Date of Birth:
+            label(for='date-of-birth') Date of Birth:
                 input#date-of-birth.form-control(type='date', name='date_of_birth' required value=(undefined===artist ? '' : artist.date_of_birth_yyyy_mm_dd) )
+        .form-group 
+            label(for='avatar') Avatar: 
+                input#avatar.form-control(type='file', name='avatar' required)
         button.btn.btn-primary(type='submit') Submit
     if errors   
         ul
