--- a/views/artist_details.pug
+++ b/views/artist_details.pug
@@ -8,7 +8,7 @@ block content
         a(href=artist.link) #{artist.name}'s Spotify.
         hr
         if artist.avatar 
-            img(src=artist.avatar)
+            img(src=artist.avatar, style="width:50%")
             hr
         if songs.length > 0
             h3 Songs.
@@ -17,9 +17,9 @@ block content
                 li 
                     a(href=song.url) #{song.name}
         else 
-            h3 This Artist has not any songs Yet!.
+            h3(style="background-color: red; color: white") #{artist.name} has not any songs Yet!.
         p 
-            a(href=artist.url+"/delete") Delete.
+            a(href=artist.url+"/delete", style="font-size: 20px; font-weight: 1000") Delete.
         p 
-            a(href=artist.url+"/update") Update.
+            a(href=artist.url+"/update", style="font-size: 20px; font-weight: 1000") Update.
     
