--- a/views/song_form.pug
+++ b/views/song_form.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content 
     h1=title 
-    form(method="POST")
+    form(method="POST", enctype="multipart/form-data")
         .form-group 
             label(for='name') Name: 
                 input#name.form-control(type='text', placeholder="Name", name='name' required value=(undefined===song ? '' : song.name) )
@@ -36,6 +36,9 @@ block content
                                 option(value=genre._id) #{genre.name}
                         else 
                             option(value=genre._id) #{genre.name}
+        .form-group 
+            label(for='cover') Avatar: 
+                input#cover.form-control(type='file', name='cover' required)
         button.btn.btn-primary(type='submit') Submit
     if errors   
         ul
