--- a/views/artist_details.pug
+++ b/views/artist_details.pug
@@ -5,7 +5,7 @@ block content
         h3 This Arist dosn't exist.
     else 
         h1=title 
-        a(href=artist.link) #{artist.name}'s Spotify.
+        a(href=artist.link) Spotify profile.
         hr
         if artist.avatar 
             img(src=artist.avatar, style="width:50%")
