--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,27 +9,28 @@ html(lang='en')
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous")
     link(rel='stylesheet' href='/stylesheets/style.css')
   body
-    div(class='container-fluid')
-      div(class='row')
-        div(class='col-sm-2')
-          block sidebar
-            ul(class='sidebar-nav')
-              li
-                a(href='/catalog') Home
-              li
-                a(href='/catalog/songs') All Songs
-              li
-                a(href='/catalog/artists') All Artists
-              li
-                a(href='/catalog/genres') All Genres
-              li
-                hr
-              li
-                a(href='/catalog/song/create') add new song
-              li
-                a(href='/catalog/artist/create') add new artist
-              li
-                a(href='/catalog/genre/create') add new genre
+    block all
+      div(class='container-fluid')
+        div(class='row')
+          div(class='col-sm-2')
+            block sidebar
+              ul(class='sidebar-nav')
+                li
+                  a(href='/catalog') Home
+                li
+                  a(href='/catalog/songs') All Songs
+                li
+                  a(href='/catalog/artists') All Artists
+                li
+                  a(href='/catalog/genres') All Genres
+                li
+                  hr
+                li
+                  a(href='/catalog/song/create') add new song
+                li
+                  a(href='/catalog/artist/create') add new artist
+                li
+                  a(href='/catalog/genre/create') add new genre
 
-        div(class='col-sm-10')
-          block content
+          div(class='col-sm-10')
+            block content
