--- a/views/layout.pug
+++ b/views/layout.pug
@@ -31,6 +31,10 @@ html(lang='en')
                   a(href='/catalog/artist/create') add new artist
                 li
                   a(href='/catalog/genre/create') add new genre
+                hr
+                hr
+                form(action="/auth/logout", method='POST')
+                  button(type="submit", style="background-color: blue; padding: 5px; color: white; font-size: 15px") LogOut: 
 
           div(class='col-sm-10')
             block content
