--- a/views/song_details.pug
+++ b/views/song_details.pug
@@ -12,6 +12,8 @@ block content
   p #[strong Genre: ]
     a(href=song.genre.url) #{song.genre.name}
     hr
+    p created by:
+      a(href=song.created_by.url) #{song.created_by.username}
     p
       a(href=song.url+'/delete') Delete Song
     p
