build the Authorizations middlewares

--- a/views/song_details.pug
+++ b/views/song_details.pug
@@ -12,9 +12,9 @@ block content
   p #[strong Genre: ]
     a(href=song.genre.url) #{song.genre.name}
     hr
-    if song.created_by
-      p created by:
-        a(href=song.created_by.url) #{song.created_by.username}
+    p created by:
+      a(href=song.created_by.url) #{song.created_by.username}
+    if song.created_by.username==currentUser.username
       p
         a(href=song.url+'/delete') Delete Song
       p
